Form, models validation for Electrical, change panda CSV dir via Setting

--- a/mechanical/templates/mechanical/view-electric-log.html
+++ b/mechanical/templates/mechanical/view-electric-log.html
@@ -31,7 +31,7 @@
                   </tr>
                   <tr>
                     <td>Date</td>
-                    <td>{{rig.date}}</td>
+                    <td>{{ rig.date.date }}</td>
                   </tr>
 
                   <tr>
