replaced Request with Elastic API, search with space working with snippets, pagination paritially done

--- a/search/templates/search/search.html
+++ b/search/templates/search/search.html
@@ -90,6 +90,10 @@
                 
             </div>
         </div>
+        
+        <!-- including variable keys ie queryset -->
+        {% include 'pagination.html' with queryset=results custom_range=custom_range %}
+        
     </div>
 </section>
 
