--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -22,3 +22,6 @@
 </footer> -->
 
 <script src="{% static 'js\bootstrap-v5.js' %}"></script>
+
+
+<script src="{% static 'js\electrical_multi_step.js' %}"></script>
