--- a/mechanical/templates/mechanical/view-equipment-log.html
+++ b/mechanical/templates/mechanical/view-equipment-log.html
@@ -21,16 +21,17 @@
 
                 <table class="table table-striped">
                   <tr>
+                    <tr>
+                      <td>Well</td>
+                      <td>{{rig.saswellname}}</td>
+                   </tr>
                     <td>Rig Name</td>
-                    <td>{{ rig.rig_name }}</td>
+                    <td>{{rig.sasrigname}}</td>
                   </tr>
-                  <tr>
-                    <td>Well</td>
-                    <td>{{ rig.well }}</td>
                   </tr>
                   <tr>
                     <td>Date</td>
-                    <td>{{ rig.date }}</td>
+                    <td>{{ rig.date.date }}</td>
                   </tr>
                   <tr>
                     <td>Shift</td>
