--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -21,6 +21,13 @@
     </ul>
 </footer> -->
 
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+<script src="{% static 'js\rig-dropdown.js' %}"></script>
+
+
 <script src="{% static 'js\bootstrap-v5.js' %}"></script>
 
 
