--- a/mechanical/templates/mechanical/electric-log.html
+++ b/mechanical/templates/mechanical/electric-log.html
@@ -42,7 +42,7 @@
 
 
         <!-- Step Wise Form Content -->
-        <form  method="POST" action="{% url 'electrical-log' %}" enctype="multipart/form-data" id="userAccountSetupForm" name="userAccountSetupForm">
+        <form  method="POST" action="{% url 'electrical-log' %}" enctype="multipart/form-data" id="userAccountSetupForm" name="userAccountSetupForm" data-rigs-url="{% url 'load-rigs' %}">
            {% csrf_token %}
 
 
@@ -56,13 +56,13 @@
                  </div>
                  <br />
                  <div class="col-4 my-2">
-                    <label class="form-label">{{ form.well.label }}</label>
-                    {{ form.well }}
+                    <label class="form-label">{{ form.saswellname.label }}</label>
+                    {{ form.saswellname }}
                  </div>
                  <br />
                  <div class="col-4 my-2">
-                    <label class="form-label">{{ form.rig_name.label }}</label>
-                    {{ form.rig_name }}
+                    <label class="form-label">{{ form.sasrigname.label }}</label>
+                    {{ form.sasrigname }}
                  </div>
                  <br />
                  <div class="col-4 my-2">
@@ -177,7 +177,7 @@
                  </div>
               </div>
 
-              
+
               {% endfor %}
 
               <br />
@@ -189,5 +189,6 @@
      </div>
   </div>
 </section>
+
 
 {% endblock %}
